added 'adding token' process

--- a/popup.html
+++ b/popup.html
@@ -5,19 +5,27 @@
       .wrapper {
         width: 300px;
         height: 150px;
+        padding: 5px;
       }
       button {
         height: 30px;
         width: 30px;
         outline: none;
       }
+      .w100 {
+        width: 100%;
+      }
+      .bm10 {
+        margin-bottom: 10px;
+      }
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <button id="changeColor"></button>
+      <!--<button id="changeColor"></button>-->
+
       <div id="auth"></div>
-      <div id="dl-tiles"></div>
+      <div id="dl-tiles" class="bm10"></div>
       <div id="gists"></div>
     </div>
     <script src="popup.js"></script>
