show the dropdowns right after submitting token

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <style>
       .wrapper {
         width: 300px;
-        height: 150px;
+        height: auto;
         padding: 5px;
       }
       button {
@@ -18,12 +18,13 @@
       .bm10 {
         margin-bottom: 10px;
       }
+      label {
+        font-weight: 600;
+      }
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <!--<button id="changeColor"></button>-->
-
       <div id="auth"></div>
       <div id="dl-tiles" class="bm10"></div>
       <div id="gists"></div>
