--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,26 @@
 <html>
   <head>
     <style>
-      .wrapper {
+      html, body {
         width: 300px;
+        padding: 0;
+        margin: 0;
+      }
+      * {
+        box-sizing: border-box;
+      }
+      .wrapper {
+        width: 100%;
         height: auto;
-        padding: 5px;
+        padding: 10px;
+        padding-top: 0;
       }
       button {
         height: 30px;
         width: 30px;
         outline: none;
       }
+
       .w100 {
         width: 100%;
       }
@@ -25,6 +35,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <center><h4> DL + geojson.io </h4></center>
       <div id="auth"></div>
       <div id="dl-tiles" class="bm10"></div>
       <div id="gists"></div>
